deploy/fashion-store/rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-headless
  namespace: fashion-store
spec:
  clusterIP: None
  publishNotReadyAddresses: true

  selector:
    app: rabbitmq

  ports:
    - name: amqp
      port: 5672
      targetPort: amqp

---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: fashion-store
spec:
  type: ClusterIP

  selector:
    app: rabbitmq

  ports:
    - name: amqp
      port: 5672
      targetPort: amqp

    - name: management
      port: 15672
      targetPort: management

    - name: prometheus
      port: 15692
      targetPort: prometheus

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  namespace: fashion-store
spec:
  serviceName: rabbitmq-headless
  replicas: 1

  selector:
    matchLabels:
      app: rabbitmq

  updateStrategy:
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: rabbitmq

    spec:
      terminationGracePeriodSeconds: 120

      containers:
        - name: rabbitmq
          image: rabbitmq:4.2.9-management
          imagePullPolicy: IfNotPresent

          ports:
            - name: amqp
              containerPort: 5672
              protocol: TCP

            - name: management
              containerPort: 15672
              protocol: TCP

            - name: prometheus
              containerPort: 15692
              protocol: TCP

          startupProbe:
            tcpSocket:
              port: amqp
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 120

          readinessProbe:
            tcpSocket:
              port: amqp
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6

          livenessProbe:
            tcpSocket:
              port: amqp
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 6

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 750m
              memory: 512Mi

          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq

            - name: rabbitmq-config
              mountPath: /etc/rabbitmq/conf.d/90-vastra.conf
              subPath: 90-vastra.conf
              readOnly: true

      volumes:
        - name: rabbitmq-config
          configMap:
            name: rabbitmq-config

  volumeClaimTemplates:
    - metadata:
        name: rabbitmq-data
      spec:
        accessModes:
          - ReadWriteOnce

        storageClassName: local-path
        volumeMode: Filesystem

        resources:
          requests:
            storage: 2Gi
