deploy/fashion-store/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: fashion-store
  namespace: fashion-store
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - fashion.local
      secretName: fashion-store-tls

  rules:
    - host: fashion.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fashion-store
                port:
                  number: 80
